<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@android:color/white">

        <!-- Horizontal LinearLayout for title and close button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Title Here"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/close"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />
        </LinearLayout>

        <!-- LinearLayout for description text and volume button -->
        <ImageView
            android:id="@+id/dialogImage"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:scaleType="centerInside"
            android:text="Video here if available / Default Image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <!-- Description Text on the Left -->
            <TextView
                android:id="@+id/dialogDescriptionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:text="@string/paniniwala"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


        <!-- Main description text -->
        <TextView
            android:id="@+id/dialogDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="13sp" />

    </LinearLayout>
</ScrollView>
