<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- Header section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/first_sentence"
                android:textSize="16sp"
                android:textAlignment="textStart" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/second_sentence"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gabay_sa_paggamit_ng_app"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textAlignment="textStart" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:text="Mga Ahensyang Namamahala sa Pangangalaga ng Karagatan sa Mercedes, Camarines Norte" />

        <!-- Horizontal scroll -->
        <!-- Horizontal scroll -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Card 1 -->
                    <FrameLayout
                        android:layout_width="160dp"
                        android:layout_height="210dp"
                        android:background="@color/white"
                        android:layout_margin="8dp">

                        <!-- Responsive Image -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/mercedec_tourism" />

                        <!-- Bottom Title Section -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom"
                            android:background="@color/primary_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mercedes Tourism"
                            android:textSize="14sp"
                            android:textColor="@android:color/white"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginBottom="10dp" />

                    </FrameLayout>

                    <!-- Card 2 -->
                    <FrameLayout
                        android:layout_width="160dp"
                        android:layout_height="210dp"

                        android:layout_margin="8dp">

                        <!-- Responsive Image -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ifms" />

                        <!-- Bottom Title Section -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom"
                            android:background="@color/primary_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fisheries and Marine Sciences"
                            android:textSize="14sp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginBottom="10dp" />

                    </FrameLayout>

                    <!-- Card 3 -->
                    <FrameLayout
                        android:layout_width="160dp"
                        android:layout_height="210dp"

                        android:layout_margin="8dp">

                        <!-- Responsive Image -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/denr" />

                        <!-- Bottom Title Section -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="bottom"
                            android:background="@color/primary_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="DENR"
                            android:textSize="14sp"
                            android:textColor="@android:color/white"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginBottom="10dp" />

                    </FrameLayout>

                    <!-- Add more cards as needed -->

                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>



    </LinearLayout>
</ScrollView>
